Create confusion_matrix project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,4 +47,5 @@ add_subdirectory(csv_lib)
 add_subdirectory(fix_csv)
 add_subdirectory(counting)
 add_subdirectory(compare_segmentation)
+add_subdirectory(confusion_matrix)
 add_subdirectory(feature_extraction)
