Add function to fetch the interpolated data set paths

--- a/confusion_matrix/CMakeLists.txt
+++ b/confusion_matrix/CMakeLists.txt
@@ -1,10 +1,12 @@
 # STATIC LIBRARY
 set(LIB_NAME confusion_matrix_lib)
 
-set(LIB_HEADERS include/data_set_identifier.hpp
-                include/manual_segmentation_point.hpp)
+set(LIB_HEADERS
+    include/data_set_identifier.hpp include/interpolated_data_set_paths.hpp
+    include/manual_segmentation_point.hpp include/segment.hpp)
 
-set(LIB_SOURCES src/manual_segmentation_point.cpp)
+set(LIB_SOURCES src/interpolated_data_set_paths.cpp
+                src/manual_segmentation_point.cpp src/segment.cpp)
 
 add_library(${LIB_NAME} STATIC ${LIB_HEADERS} ${LIB_SOURCES})
 
