--- a/confusion_matrix/test/CMakeLists.txt
+++ b/confusion_matrix/test/CMakeLists.txt
@@ -2,7 +2,8 @@ include(GoogleTest)
 
 set(TEST_NAME confusion_matrix_test)
 
-set(TEST_SOURCES main.cpp manual_segmentation_point_test.cpp)
+set(TEST_SOURCES interpolated_data_set_paths_test.cpp main.cpp
+                 manual_segmentation_point_test.cpp)
 
 add_executable(${TEST_NAME} ${TEST_SOURCES})
 
