--- a/compare_segmentation/test/CMakeLists.txt
+++ b/compare_segmentation/test/CMakeLists.txt
@@ -2,8 +2,14 @@ include(GoogleTest)
 
 set(TEST_NAME compare_segmentation_test)
 
-set(TEST_SOURCES csv_line_test.cpp data_set_info_test.cpp log_files_test.cpp
-                 log_info_test.cpp log_line_test.cpp main.cpp)
+set(TEST_SOURCES
+    csv_line_test.cpp
+    data_set_info_test.cpp
+    log_files_test.cpp
+    log_info_test.cpp
+    log_line_test.cpp
+    main.cpp
+    mode_test.cpp)
 
 add_executable(${TEST_NAME} ${TEST_SOURCES})
 
